...
    <string name="stop_scanning">Stop scanning</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="default_home_search_hint">Search name, user or url</string>
    <string name="all_items_home_search_hint">Search name, user, url or tag</string>
    <string name="user_search_hint">Search for users…</string>
    <string name="no_passwords">There are no passwords</string>
    <string name="no_otps">There are no TOTPs</string>
    <string name="authentication_required">Authentication required</string>
    <string name="save">Save</string>
    <string name="apply">Apply</string>
    <string name="confirm">Confirm</string>
    <string name="suggested">Suggested</string>
    <string name="other">Other</string>
    <string name="favourites_failure">Could not modify favourite</string>
    <string name="delete_failure">Could not delete resource</string>
    <string name="shared_with">Shared with</string>
    <string name="location">Location</string>
    <string name="content_not_available">The content is not available anymore</string>
    <string name="consent">I have read and consent</string>
    <string name="accessibility_policies_accept">Accept</string>
    <string name="accessibility_policies_decline">Decline</string>
    <string name="name_suspended">%s (suspended)</string>
    <string name="name_expired">%s (expired)</string>
...
        translatable="false">• %s</string>
    <string name="common_bullet"
        translatable="false">• </string>
    <string name="common_message_resource_edited">%s resource was successfully edited.</string>
    <string name="common_message_resource_deleted">%s resource was deleted.</string>
    <string name="common_message_resource_shared">The resource permissions were updated.</string>
    <string name="common_message_folder_created">New folder %s has been created!</string>
    <string name="common_lack_shared_key_access">You cannot perform this action because you lack access to the shared metadata key.</string>

    <string name="validation_required_with_max_length">Length should be between 1 and %d</string>
    <string name="validation_max_length">Maximum length is %d</string>
    <string name="validation_is_required">This input is required</string>
    <string name="validation_required_integer">Should be an integer number</string>
...
    <string name="autofill_conflict_message_detailed">Multiple autofill methods are active.\nPlease disable one to ensure a smooth autofill experience.</string>

    <string name="home_empty_list">Empty list</string>
    <string name="home_create">Create</string>
    <string name="home_in_sub_folders">in subfolders:</string>
    <string name="home_in_current_folder">in \"%s\":</string>
    <string name="home_speed_dial_add_password">Add password</string>
    <string name="home_speed_dial_add_folder">Add folder</string>
    <string name="home_please_wait_for_refresh">Please wait for data refresh to finish</string>
    <string name="home_failed_to_delete_totp">Failed to delete TOTP</string>

    <string name="switch_account_see_details">See details</string>
    <string name="switch_account_sign_out">Sign out</string>
    <string name="switch_account_manage_accounts">Manage accounts</string>
...
    <string name="biometric_setup_configure_title">Configure Biometric</string>
    <string name="biometric_setup_configure_description">Unlock your secrets in a second.</string>
    <string name="biometric_setup_use_title">Use Biometric instead of passphrase</string>
    <string name="biometric_setup_use_description">Unlock your secrets in a second.</string>
    <string name="biometric_setup_biometric_title">Confirm using biometric</string>
    <string name="biometric_setup_biometric_subtitle">Confirm using your biometric</string>
    <string name="folder_root">Root</string>

    <string name="resource_permissions_can_read">Can read</string>
    <string name="resource_permissions_can_update">Can update</string>
    <string name="resource_permissions_is_owner">Is owner</string>
    <string name="resource_permissions_one_owner">Please make sure there is at least one owner.</string>
    <string name="resource_permissions_share_simulation_failed">There was an error during share simulation</string>
...
    <string name="folder_details_title">Folder details</string>
    <string name="folder_details_name_header">Folder name</string>
    <string name="folder_details_location_separator"
        translatable="false">›</string>
    <string name="help_button_description">Help</string>

    <string name="create_folder_title">Create folder</string>
    <string name="create_folder_name">Name</string>
    <string name="create_folder_name_validation">Folder name cannot be empty</string>
    <string name="create_folder_error_format">Could not create folder. %s</string>
    <string name="enter_folder_name">Enter folder name</string>

    <string name="share_folder_error_format">Could not share folder. %s</string>
...
