<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            app:layout_scrollFlags="scroll|enterAlways">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="@dimen/dp_24"
                android:layout_height="@dimen/dp_24"
                android:layout_marginStart="@dimen/dp_16"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@drawable/ic_back"
                android:visibility="gone"
...
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_8"
                android:layout_marginBottom="@dimen/dp_16"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/dp_16"
                app:layout_constraintEnd_toStartOf="@id/moreButton"
                app:layout_constraintStart_toEndOf="@id/backButton"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/titleDrawable"
                    android:layout_width="@dimen/dp_24"
                    android:layout_height="@dimen/dp_24"
                    android:scaleType="fitCenter" />

                <TextView
                    android:id="@+id/screenTitleLabel"
...
                app:layout_constraintTop_toBottomOf="@id/labelLayout"
                app:startIconDrawable="@drawable/ic_filter"
                app:startIconTint="@android:color/transparent"
                app:startIconTintMode="screen">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/searchEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/text_primary"
...
