<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="homeSpeedDialViewId"
        type="id" />
    <item name="homeSpeedDialViewAddPasswordId"
        type="id" />
    <item name="homeSpeedDialViewAddFolderId"
        type="id" />
    <item name="otpSpeedDialViewId"
        type="id" />
    <item name="otpSpeedDialViewScanQr"
        type="id" />
    <item name="otpSpeedDialViewCreateManually"
        type="id" />
</resources>
